{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 18,
  "lineage": "3fb8353a-f806-4008-b0fc-8dcbae3db3d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03bcb89113b2f9622",
            "domain": "vpc",
            "id": "eipalloc-0f59c5efbd88dfd65",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0ebd63bcd899dfaa2",
            "private_dns": "ip-10-0-1-131.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.131",
            "public_dns": "ec2-35-72-221-171.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.72.221.171",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:671819560154:internet-gateway/igw-0b78dcee9ec44f44f",
            "id": "igw-0b78dcee9ec44f44f",
            "owner_id": "671819560154",
            "tags": {
              "Name": "terra-IGW"
            },
            "vpc_id": "vpc-0d9483c030a7e58c4"
          },
          "dependencies": [
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f59c5efbd88dfd65",
            "id": "nat-032c268f3a72f8974",
            "network_interface_id": "eni-0ebd63bcd899dfaa2",
            "private_ip": "10.0.1.131",
            "public_ip": "35.72.221.171",
            "subnet_id": "subnet-03837ca86a53eba2d",
            "tags": {
              "Name": "terra_NAT"
            }
          },
          "dependencies": [
            "aws_eip.terraEIP",
            "aws_subnet.private01",
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0006cb5864d24d5481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-032c268f3a72f8974",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0006cb5864d24d548",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b78dcee9ec44f44f",
            "id": "r-rtb-0f95324f23aa284891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f95324f23aa28489",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0006cb5864d24d548",
            "owner_id": "671819560154",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terra_private_rt_pjc"
            },
            "vpc_id": "vpc-0d9483c030a7e58c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f95324f23aa28489",
            "owner_id": "671819560154",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terra_public_rt_pjc"
            },
            "vpc_id": "vpc-0d9483c030a7e58c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0311f5b7c31505a9e",
            "route_table_id": "rtb-0006cb5864d24d548",
            "subnet_id": "subnet-03837ca86a53eba2d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private01",
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c57b01e564b8db8",
            "route_table_id": "rtb-0f95324f23aa28489",
            "subnet_id": "subnet-007a0e49454697ede"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public01",
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:671819560154:subnet/subnet-03837ca86a53eba2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03837ca86a53eba2d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671819560154",
            "tags": {
              "Name": "terra-private-01-subnet"
            },
            "tags_all": {
              "Name": "terra-private-01-subnet"
            },
            "vpc_id": "vpc-0d9483c030a7e58c4"
          },
          "dependencies": [
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:671819560154:subnet/subnet-007a0e49454697ede",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-007a0e49454697ede",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671819560154",
            "tags": {
              "Name": "terra-public-01-subnet"
            },
            "tags_all": {
              "Name": "terra-public-01-subnet"
            },
            "vpc_id": "vpc-0d9483c030a7e58c4"
          },
          "dependencies": [
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:671819560154:vpc/vpc-0d9483c030a7e58c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c6818ffa01116ad",
            "default_route_table_id": "rtb-022475672cf834357",
            "default_security_group_id": "sg-063a91b3f97cb1a1c",
            "dhcp_options_id": "dopt-45103322",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d9483c030a7e58c4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-022475672cf834357",
            "owner_id": "671819560154",
            "tags": {
              "Name": "Terraform TEST1"
            },
            "tags_all": {
              "Name": "Terraform TEST1"
            }
          }
        }
      ]
    }
  ]
}